src- Version 4.19/objects/Stock_Item__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Available Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <inlineHelpText>Bar Code number</inlineHelpText>
        <label>Bar Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>Dispatched_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Dispatched_Item__c.Stock_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Invoice IT Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Stock Items</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Entry_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Stock Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Stock Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stock Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Dispatched_Quantity__c</columns>
        <columns>Stock_Entry_Date__c</columns>
        <columns>Bar_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Stock Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>